--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,6 +3,10 @@ headless = true
 port = 8501
 enableCORS = false
 
+[client]
+toolbarMode = "minimal"
+showSidebarNavigation = false
+
 [browser]
 gatherUsageStats = false
 
